[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tpx"
version = "0.1.1"
description = "Python SDK for the Toronto Prediction Exchange"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/predict/vpx-core"

[tool.setuptools.packages.find]
include = ["tpx*"]
